# climate_indices

./: .coveragerc  .deepsource.toml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .pypirc  .readthedocs.yaml  .scrutinizer.yml  .travis.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER  Dockerfile  GEMINI.md  LICENSE  Palmer Drought Index.ipynb  README.md  README.rst  RELEASE_NOTES.md  RELEASE_NOTES_v2.2.0.md  VALIDATION.md  climdivs_water_balance_comparison.py  code_of_conduct.md  compare_palmer.py  compare_pdinew.py  compare_pet.py  compute.py  diff_nidis_vs_cmb_divisions.py  environment.yml  indices.py  indices_nclimdiv_all_cmb_inputs.py  ingest_climatology_nclimdiv.py  ingest_climdivs.py  ingest_nclimdiv.py  llms-full.txt  (+22 more)
.circleci/: config.yml
.claude/: CLAUDE.md  tech-spec.md
.claude/agents/: code-reviewer.md  test-writer.md
.claude/commands/: review.md  security-scan.md  ship.md
.claude/context/: brief.md
.claude/rules/: api.md  architecture.md  database.md  testing.md
.codex/: INSTRUCTIONS.md  config.toml
.gemini/: GEMINI.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md
.github/workflows/: benchmarks.yml  continuous-integration-workflow.yml  deepsource_coverage_report.yml  release.yml  unit-tests-workflow.yml
.ipynb_checkpoints/: Palmer Drought Index-checkpoint.ipynb
_bmad-output/: project-context.md  v25-release-brief.md
_bmad-output/implementation-artifacts/: 5-3-final-v240-validation.md  epic-5-retro-2026-04-05.md  plan-t1-exception-hierarchy.md  sprint-status.yaml  tech-spec-v23-v24-release-sequence-fix.md  tech-spec-wip.md
_bmad-output/planning-artifacts/: architecture.md  (+10 more)
climate_indices/: __init__.py  __main__.py  __spi__.py  compute.py  eto.py  indices.py  lmoments.py  palmer.py  pdinew.py  thornthwaite.py  utils.py
compare/: compare_palmer.py  compare_pdinew.py  compare_pet.py  monthly_diffs.py  pdi_comparison.py
context/: INDEX.md  architecture.md  climate_indices_reference.md  dev_workflow.md  plan_validation_checklist.md  project_brief.md  python_conventions.md  scientific_computing.md  tech_stack.md  uv_rules.md
demo/: DEMO-INTRO.md  DEMO.md  SDD-OVERVIEW.md  WALKTHROUGH-INTRO.md  WALKTHROUGH.md  bmad-evolution.md
docs/: 2025_modernization_roadmap.md  Makefile  algorithms.rst  architecture.md  component-inventory.md  conf.py  contribution-guide.md  deployment-guide.md  development-guide.md  floating_point_best_practices.md  index.md  index.rst  make.bat  project-overview.md  project-scan-report.json  pypi_release.rst  pypi_release_guide.md  quickstart.rst  reference.rst  release-process.md  requirements.txt  source-tree-analysis.md  test_fixture_management.md  troubleshooting.rst  xarray_compatibility.md  xarray_migration.rst
example_data/: example_nclimgrid_lowres.nc
example_inputs/: README.md  calibr.coef.div  climdivs_all.nc.REMOVED.git-id  cmorph_lowres_daily_conus_prcp.nc.REMOVED.git-id  cp.index.div  cp.index.div.REMOVED.git-id  effdat.div  effdat.div.REMOVED.git-id  etdat.div  etdat.div.REMOVED.git-id  nclimdiv-v1.0.0-20171204.nc.REMOVED.git-id  nclimdiv.nc.REMOVED.git-id  nclimdiv_20170404.nc.REMOVED.git-id  nclimgrid_lowres_pet.nc.REMOVED.git-id  nclimgrid_lowres_prcp.nc.REMOVED.git-id  nclimgrid_lowres_tavg.nc.REMOVED.git-id  nclimgrid_soil.nc  pdat.div  pdat.div.REMOVED.git-id  pdinew.soilconst  pdsi.index.div  pdsi.index.div.REMOVED.git-id  pedat.div  pedat.div.REMOVED.git-id  phat.div  phat.div.REMOVED.git-id  phdi.index.div  phdi.index.div.REMOVED.git-id  pldat.div  pldat.div.REMOVED.git-id  pmdi.index.div  pmdi.index.div.REMOVED.git-id  prdat.div  prdat.div.REMOVED.git-id  prism_soil.nc  probdat.div  probdat.div.REMOVED.git-id  rdat.div  rdat.div.REMOVED.git-id  rodat.div  (+20 more)
indices_python/: compute.py  indices.py  netcdf_utils.py  palmer.py  pdinew.py  process_divisions.py  process_grid.py  thornthwaite.py  utils.py
ingest/: ingest_climatology_nclimdiv.py  ingest_climdivs.py  ingest_nclimdiv.py  ingest_nclimgrid.py  ingest_prism.py  ingest_prism_soil.py  prism_wrcc_merge.py
misc/: diff_nidis_vs_cmb_divisions.py  indices_nclimdiv_all_cmb_inputs.py  monthly_nclimdiv.py  nclimdiv_netcdf_to_ascii.py
notebooks/: 00_quickstart_indices_demo.ipynb  PDSI_Canadian_Stations.ipynb  Palmer Drought Index.ipynb  concurrent_shared_memory_example.ipynb  eddi_xarray.ipynb  generate_fitting_parameters_nclimgrid.ipynb  jupyter_notebook_config.py  muitprocess_spi_nclimgrid.ipynb  palmer_indices_xarray.ipynb  spi_simple.ipynb  visualize_precip_spi.ipynb  xarray_getting_started.ipynb
process/: process_divisions.py  process_grid.py  process_nclimdiv.py  process_nclimgrid.py
reports/: review_20260212.md
scripts/: compare_versions.py  create_github_issues.py  gen_epics_simple.py  generate_epics.py  generate_llms_txt.py  netcdf_utils.py  pattern_compliance_check.py  prepare_noaa_eddi_fixtures.py  process_divisions.py  process_divisions_apply_along_axis.py  process_grid.py  process_grid_groupby.py  process_grid_map.py  process_grid_ufunc.py  spi.py  spi_fitting.py  spi_multiprocess.py
task/: task_divisions.py  task_grid.py
tests/: README.md  conftest.py  conftest.py.REMOVED.git-id  conftest_benchmark.py  conftest_numpy.py  conftest_xarray.py  context.py  fixtures.py  fixtures.py.REMOVED.git-id  test_accessors.py  test_backward_compat.py  test_benchmark_chunked.py  test_benchmark_memory.py  test_benchmark_overhead.py  test_benchmark_palmer.py  test_benchmark_palmer_xarray.py  test_calculation_event_logging.py  test_cf_metadata.py  test_computation_errors.py  test_compute.py  test_data_quality_warnings.py  test_eddi.py  test_eddi_cli.py  test_eddi_xarray.py  test_edge_cases.py  test_error_context_logging.py  test_eto.py  test_exceptions.py  test_fittings.py  test_indices.py  test_input_type_detection.py  test_input_validation.py  test_logging.py  test_logging_config.py  test_metadata_validation.py  test_netcdf_utils.py  test_noaa_eddi_reference.py  test_palmer.py  test_palmer_equivalence.py  test_palmer_xarray.py  (+19 more)
(+4187 files in other folders)
