[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climate_indices"
version = '2.2.0'
description = 'Reference implementations of various climate indices typically used for drought monitoring'
authors = [{name = "James Adams", email = "monocongo@gmail.com"}]
readme = 'README.md'
license = {file = "LICENSE"}
keywords = ["climate", "drought", "meteorology", "SPI", "SPEI", "PET", "precipitation", "evapotranspiration"]
classifiers = [
     'Development Status :: 5 - Production/Stable',
     'Intended Audience :: Developers',
     'Intended Audience :: Education',
     'Intended Audience :: Science/Research',
     'License :: OSI Approved :: BSD License',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3.12',
     'Programming Language :: Python :: 3.13',
     'Topic :: Software Development :: Libraries :: Python Modules',
     'Topic :: Scientific/Engineering :: Atmospheric Science',
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "cftime>=1.6.4.post1",
    "dask>=2025.7.0",
    "h5netcdf>=1.6.3",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.15.3",
    "structlog>=24.1.0",
    "xarray>=2025.6.1",
]
[project.optional-dependencies]
# NOTE: Test dependencies are intentionally duplicated in [dependency-groups].test below.
# This is required because pip uses [project.optional-dependencies] for `pip install .[test]`
# while uv uses [dependency-groups] for `uv sync --group test`. Both systems need the same
# dependencies but use different configuration sections. See [dependency-groups].test for details.
test = [
    "coverage>=7.10.1",
    "hypothesis>=6.100.0",
    "pytest>=8.4.1",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=6.2.1",
    "pytest-randomly>=3.16.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
]
dev = [
    "climate-indices[test,docs]",
    "build>=1.3.0",
    "cartopy>=0.24.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mypy>=1.10.0",
    "ruff>=0.12.7",
    "twine>=6.1.0",
    "types-psutil>=5.9.0",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=1.0",
    "tomli>=2.0.0; python_version < '3.11'",
]
performance = [
    "psutil>=5.9.0",
]

[project.scripts]
climate_indices = "climate_indices.__main__:main"
process_climate_indices = "climate_indices.__main__:main"
spi = "climate_indices.__spi__:main"

[project.urls]
'Homepage' = 'https://github.com/monocongo/climate_indices'
'Documentation' = 'https://climate-indices.readthedocs.io/en/latest/'
'Repository' = 'https://github.com/monocongo/climate_indices'
'Bug Tracker' = 'https://github.com/monocongo/climate_indices/issues'
'Changelog' = 'https://github.com/monocongo/climate_indices/blob/master/CHANGELOG.md'

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "notebooks",  # Jupyter notebooks
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff formatter
    "B008",  # do not perform function calls in argument defaults
]
per-file-ignores = {"__init__.py" = ["F401"], "tests/**/*" = ["B011"]}

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "structlog.*",
    "netCDF4.*",
    "xarray.*",
    "dask.*",
    "pandas.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "climate_indices.typed_public_api",
]
strict = true

[[tool.mypy.overrides]]
module = ["climate_indices.__spi__"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    'ignore::FutureWarning',
    'ignore::climate_indices.exceptions.ShortCalibrationWarning',
    'ignore::climate_indices.exceptions.GoodnessOfFitWarning',
    'ignore::climate_indices.exceptions.MissingDataWarning',
]
markers = [
    "benchmark: performance benchmark tests (deselect with '-m \"not benchmark\"')",
    "slow: slow tests that may be skipped in CI (deselect with '-m \"not slow\"')",
    "integration: tests requiring external resources or full pipeline",
]
addopts = "-m 'not benchmark' --strict-markers --tb=short"

[tool.pytest-benchmark]
min_rounds = 5
warmup = true
warmup_iterations = 1
columns = ["mean", "stddev", "rounds", "iterations"]
sort = "mean"

[tool.coverage.run]
source = ["src/climate_indices"]
branch = true
omit = [
    "src/climate_indices/__main__.py",
    "src/climate_indices/__spi__.py",
]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "notebooks/",
    "assets/",
    "docs/",
    "htmlcov/",
    ".github/",
    ".venv/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".mypy_cache/",
    ".idea/",
    ".claude/",
    "*.coverage*",
    "*.log",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "tests/",
    "notebooks/",
    "assets/",
    "docs/",
    "htmlcov/",
    ".github/",
    ".venv/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".mypy_cache/",
    ".idea/",
    ".claude/",
]

[dependency-groups]
# NOTE: Test dependencies are intentionally duplicated from [project.optional-dependencies].test.
# PEP 735 dependency groups are used by modern tools like uv (`uv sync --group test`) but are
# not recognized by pip. We maintain both sections to support both ecosystems. Unfortunately,
# [project.optional-dependencies] does not support {include-group} references, so the duplication
# must be maintained manually. Keep these sections synchronized when updating test dependencies.
test = [
    "coverage>=7.10.1",
    "hypothesis>=6.100.0",
    "pytest>=8.4.1",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=6.2.1",
    "pytest-randomly>=3.16.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
]
dev = [
    {include-group = "test"},
    "build>=1.3.0",
    "cartopy>=0.24.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mypy>=1.10.0",
    "ruff>=0.12.7",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=1.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "twine>=6.1.0",
    "types-psutil>=5.9.0",
]
security = [
    "cryptography>=46.0.5",
    "pip-audit>=2.9.0",
]
